[package]
name = "gtraceroute"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31.1"
egui = "0.31.1"
futures = "0.3.31"
hickory-resolver = "0.25.2"
nex-packet = "0.19.1"
rand = "0.9.1"
socket2 = { version = "0.5.10", features = ["all"] }
tokio = { version = "1.45", features = ["full"] }
tokio_socket2 = "0.1.1"
walkers = "0.38.0"
